src/main/java/com/example/cars/error/InvalidLoginException.java
package com.example.cars.error;

public class InvalidLoginException extends RuntimeException {
    public InvalidLoginException(String message) {
        super(message);
    }
}
